5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1575_1334.log
== TEST (2019-03-12 12:49:18) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 5*3)

print("Divisao: ",5+3//1)

print("Resto: ", 8)

print("Potenciacao: ", 8**2)
-- OUTPUT:
Adicao:  8
Subtracao:  2
Multiplicacao:  15
Divisao:  8
Resto:  8
Potenciacao:  64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:49:24) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 5*3)

print("Divisao: ",5+3//1)

print("Resto: ", 8)

print("Potenciacao: ", 8**2)
-- EXECUTION TIME:
0.141606
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  2
Multiplicacao:  15
Divisao:  8
Resto:  8
Potenciacao:  64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:50:02) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 5*3)

print("Divisao: ", 80/10)

print("Resto: ", 80/9)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  2
Multiplicacao:  15
Divisao:  8.0
Resto:  8.88888888888889
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:50:27) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 5*3)

print(round("Divisao: ", 80/10))

print("Resto: ", 80/9)

print("Potenciacao: ", 2**3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round("Divisao: ", 80/10))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:51:29) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 5*3)

print("Divisao: ",(round 80/10, 1)

print("Resto: ", 80/9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 7
    print("Divisao: ",(round 80/10, 1)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:52:24) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 5*3)

print("Divisao: ", 80/10)

print("Resto: ", (round 80/9, 0)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", (round 80/9, 0)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:52:44) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 5*3)

print("Divisao: ", 80/10)

print("Resto: "(round 80/9, 0)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: "(round 80/9, 0)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:53:14) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 5*3)

print("Divisao: ", 80/10)

print(round ("Resto: " 80/9, 0))

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print(round ("Resto: " 80/9, 0))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:54:34) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 5*3)

print("Divisao: ", 80/10)

print(round 80/9, 1)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print(round 80/9, 1)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:55:18) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 5*3)

print("Divisao: ", 80/10)

print("Resto: "(round 80/9, 1))

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: "(round 80/9, 1))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:55:33) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 5*3)

print("Divisao: ", 80/10)

print("Resto: "(round (80/9, 1))

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2**3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:55:54) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 5*3)

print("Divisao: ", 80/10)

print("Resto: "round(80/9, 1))

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: "round(80/9, 1))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:56:33) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 5*3)

print("Divisao: ", 80/10)

print(round(80/9, 1)"Resto: " )

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print(round(80/9, 1)"Resto: " )
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:56:42) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 5*3)

print("Divisao: ", 80/10)

print(round(80/9, 1))

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  2
Multiplicacao:  15
Divisao:  8.0
8.9
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:57:14) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 2*2*2)

print("Divisao: ", 80/10)

print(round(80/9, 0))

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  2
Multiplicacao:  8
Divisao:  8.0
9.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:58:52) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 2*2*2)

print("Divisao: ", 80/10)

print(73%9)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  2
Multiplicacao:  8
Divisao:  8.0
1
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:59:14) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 2*2*2)

print("Divisao: ", 80/10)

print("resto: " 73%9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("resto: " 73%9)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:59:24) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 2*2*2)

print("Divisao: ", 80/10)

print("resto: ", 73%9)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  2
Multiplicacao:  8
Divisao:  8.0
resto:  1
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:59:33) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 2*2*2)

print("Divisao: ", 80/10)

print("resto: ", 78%9)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  2
Multiplicacao:  8
Divisao:  8.0
resto:  6
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:59:38) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 2*2*2)

print("Divisao: ", 80/10)

print("resto: ", 79%9)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  2
Multiplicacao:  8
Divisao:  8.0
resto:  7
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:59:45) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 2*2*2)

print("Divisao: ", 80/10)

print("resto: ", 80%9)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  2
Multiplicacao:  8
Divisao:  8.0
resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:00:40) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 2*2*2)

print("Divisao: ", 80/10)

print("resto: ", 80%9)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.127522
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  2
Multiplicacao:  8
Divisao:  8.0
resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:00:46) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 5-3)

print("Multiplicacao: ", 2*2*2)

print("Divisao: ", 80/10)

print("resto: ", 80%9)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  2
Multiplicacao:  8
Divisao:  8.0
resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:00:59) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 15-7)

print("Multiplicacao: ", 2*2*2)

print("Divisao: ", 80/10)

print("resto: ", 80%9)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:01:01) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 15-7)

print("Multiplicacao: ", 2*2*2)

print("Divisao: ", 80/10)

print("resto: ", 80%9)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.196514
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:01:05) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 15-7)

print("Multiplicacao: ", 2*2*2)

print("Divisao: ", 80/10)

print("resto: ", 80%9)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:01:32) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 15-7)

print("Multiplicacao: ", 2*2*2)

print("Divisao: ", 80/10)

print("Resto: ", 80%9)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:01:33) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 15-7)

print("Multiplicacao: ", 2*2*2)

print("Divisao: ", 80/10)

print("Resto: ", 80%9)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.196954
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
